# tauri-plugin-system

./: LICENSE  README.md  package-lock.json  package.json
plugins/plugin/: manifest.json  plugin.js
plugins/plugin2/: manifest.json  plugin.js
resources/: plugin.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  api.ts  plugin.ts  vm.ts
